<resources>
    <string name="app_name">FusePla</string>
    <string name="login_sound">消息通知声音提示</string>
    <string name="login_shake">消息通知振动提示</string>
    <string name="login_ringtong_tip">消息通知提示音</string>
    <string name="login_receive_message_notification">接收消息通知</string>
    <string name="login_follow_system">跟随系统</string>

    <string name="login_new_supplant">新一代智能工厂</string>
    <string name="login_pass">密码</string>
    <string name="login_remember_pass">记住密码</string>
    <string name="login_net_setting">网络设置</string>
    <string name="login_logging">登录</string>
    <string name="login_hold_realm">支持域名</string>
    <string name="login_input_realm">输入域名地址</string>
    <string name="login_realm">域名</string>InputStream
    <string name="login_input_ip">输入IP地址</string>
    <string name="login_ip">服务器IP</string>
    <string name="login_input_port">输入端口</string>
    <string name="login_port">端口</string>
    <string name="login_old_pass">旧密码</string>
    <string name="login_input_old_pass">输入旧密码</string>
    <string name="login_new_pass">新密码</string>
    <string name="login_input_new_pass">输入新密码</string>
    <string name="login_sure_new_pass">确认新密码</string>
    <string name="login_again_input_new_pass">再次输入新密码</string>
    <string name="login_sure">确定</string>
    <string name="login_support_qr">支持二维码</string>
    <string name="login_offline">离线模式</string>
    <string name="login_support_UHF">支持超高频</string>
    <string name="login_select_temperature">选择测温仪</string>
    <string name="login_select_shake">选择测振仪</string>
    <string name="login_pda_setting">PDA设置</string>
    <string name="login_tv_size">字体大小</string>
    <string name="login_switch_language">中英文切换</string>
    <string name="login_replace_pass">修改密码</string>
    <string name="login_confirm_info">新消息提醒</string>
    <string name="login_safe_module_config">安全环保参数设置</string>
    <string name="login_safe_map_cache">地图缓存设置</string>

    <string name="login_set_tv_info">请选择下方刻度设置字体大小。\n\n为客户创造价值，坚持奋斗与创新，\n敬业诚信，追求卓越。</string>
    <string name="login_replace_info">修改新的字体需要重新启动应用才能生效，是否确定修改?</string>
    <string name="login_about_our">关于我们</string>
    <string name="login_is_delete">是否删除</string>
    <string name="login_must_seting_ip">必须设置服务器IP地址</string>
    <string name="login_must_setting_service">必须设置服务器地址</string>
    <string name="login_lodding">正在登陆</string>
    <string name="login_logging_invaild_again">登陆已失效，请重新登陆</string>
    <string name="login_name_pass_empty">用户名和密码不允许为空</string>
    <string name="login_name_empty">用户名不允许为空</string>
    <string name="login_name_pass_wrong">用户名/密码不合法</string>
    <string name="login_pass_empty">密码不允许为空</string>
    <string name="login_get_user_info">正在获取用户信息</string>
    <string name="login_loging_fail_permission">获取用户信息失败，请检查用户查看权限</string>
    <string name="login_login_succeed">登陆成功</string>
    <string name="login_name_pass_error">用户名或密码错误</string>
    <string name="login_wrong_all">网络设置或用户名密码错误</string>
    <string name="login_info_setting">消息设置</string>
    <string name="login_net_repair_save">网络设置已经被修改，是否要保存</string>
    <string name="login_save">保存</string>
    <string name="login_out">离开</string>
    <string name="login_setting_ip_location">请设置服务器IP地址</string>
    <string name="login_input_ip_location">请输入正确的服务器IP地址</string>
    <string name="login_setting_port">请设置端口</string>
    <string name="login_input_sure_port">请输入正确的端口</string>
    <string name="login_must_setting_location">必须设置服务器地址</string>
    <string name="login_input_sure_ip_location">请输入正确的服务器地址</string>
    <string name="login_net_repair_logging">网络设置已被修改，是否要重新登陆</string>
    <string name="login_again_logging">重新登陆</string>
    <string name="login_logouting">正在登出</string>
    <string name="login_out_succeed">登出成功</string>
    <string name="login_out_fail">登出失败</string>
    <string name="login_old_pass_empty">旧密码不能为空</string>
    <string name="login_new_pass_empty">新密码不能为空</string>
    <string name="login_again_new_pass_empty">重复新密码不能为空</string>
    <string name="login_new_pass_different">新密码输入不一致</string>
    <string name="login_replacing_pass">正在修改密码</string>
    <string name="login_unuse">不启用</string>
    <string name="login_sbt">思必拓自带</string>
    <string name="login_su100">SU100系列</string>
    <string name="login_no_search_data">未搜索到数据</string>
    <string name="login_flowing_system">跟随系统</string>
    <string name="login_setting">设置</string>
    <string name="login_text_setting">字体设置</string>
    <string name="login_text_standard">标准</string>
    <string name="login_search_radius">请设置搜索半径（单位：米）</string>
    <string name="login_search_radius_hint">半径为0表示不限制搜索半径</string>
    <string name="login_user_name">用户名</string>
    <string name="choose_app_mode">选择APP模式</string>
</resources>
