<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bgGray"
    android:orientation="vertical">

    <include layout="@layout/ly_titlebar_local" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_3"
                android:background="@drawable/sh_white"
                android:padding="@dimen/dp_10">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/login_hold_realm"
                    android:textColor="@color/textColorblack"
                    android:textSize="@dimen/fontSize_15sp" />

                <com.supcon.common.view.view.SwitchButton
                    android:id="@+id/urlSwitchBtn"
                    android:tag="urlSwitchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <com.supcon.mes.mbap.view.CustomEditText
                android:id="@+id/urlInput"
                android:tag="urlInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:background="@drawable/sh_white"
                android:layout_marginTop="@dimen/dp_1"
                android:paddingLeft="@dimen/dp_15"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                app:edit_hint="@string/login_input_realm"
                app:text="@string/login_realm"
                app:text_width="120dp"
                app:gravity="center_vertical"
                app:icon_visible="false"
                />

            <com.supcon.mes.mbap.view.CustomEditText
                android:id="@+id/ipInput"
                android:tag="ipInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@drawable/sh_white"
                android:paddingLeft="@dimen/dp_15"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                app:edit_hint="@string/login_input_ip"
                app:text="@string/login_ip"
                app:text_width="120dp"
                app:gravity="center_vertical"
                app:icon_visible="false"
                />
            <com.supcon.mes.mbap.view.CustomEditText
                android:id="@+id/portInput"
                android:tag="portInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/sh_white"
                android:layout_marginTop="@dimen/dp_1"
                android:paddingLeft="@dimen/dp_15"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                app:edit_hint="@string/login_input_port"
                app:text="@string/login_port"
                app:text_width="120dp"
                app:gravity="center_vertical"
                app:icon_visible="false"
                />
        </LinearLayout>


    </ScrollView>


</LinearLayout>
